Completed grid that data will be displayed on. Modified html fuile

--- a/index.html
+++ b/index.html
@@ -13,52 +13,75 @@
 
 <body>
     <div class="titleName">
-        <img id="sanDiego" src="sandiego.jpg" alt="San Diego">
-        <img id="padres" src="padres.jpg" alt="Padres">
+       <h1><span>Major League Baseball</span> Team Hub</h1>
     </div>
+    <!-- Search Bar -->
+    <div id="searchBar">
+        <input placeholder="Search for a team here" type="text">
+    </div>
+    <!-- Team name section -->
     <div id="roster">
 
-        <h4 style="text-align: center;">Padres Roster</h4>
+        <h4 style="text-align: center;">MLB Teams</h4>
 
         <ul id="firstHalf">
-            <li>Pedro Avila</li>
-            <li>Nabil Crismatt</li>
-            <li>Yu Darvish</li>
-            <li>Luis Garcia</li>
-            <li>Mackenzie Gore</li>
-            <li>Tim Hill</li>
-            <li>Pierce Johnson</li>
-            <li>Dinelson Lamet</li>
-            <li>Sean Manaea</li>
-            <li>Nick Martinez</li>
-            <li>Joe Musgrove</li>
-            <li>Taylor Rogers</li>
-            <li>Craig Stammen</li>
-            <li>Robert Suarez</li>
-            <li>Steven Wilson</li>
-            <li>Jorge Alfaro</li>
-            <li>Austin Nola</li>
+            <li>Angels</li>
+            <li>Astros</li>
+            <li>Athletics</li>
+            <li>Blue Jays</li>
+            <li>Braves</li>
+            <li>Brewers</li>
+            <li>Cardinals</li>
+            <li>Cubs</li>
+            <li>Diamondbacks</li>
+            <li>Dodgers</li>
+            <li>Giants</li>
+            <li>Guardians</li>
+            <li>Mariners</li>
+            <li>Marlins</li>
+            <li>Mets</li>
         </ul>
         <ul id="secondHalf">
-            <li>C.J. Abrams</li>
-            <li>Jake Cronenworth</li>
-            <li>Eric Hosmer</li>
-            <li>Ha-Seong Kim</li>
-            <li>Manny Manchado</li>
-            <li>Luke Voit</li>
-            <li>Jose Azocar</li>
-            <li>Matt Beaty</li>
-            <li>Trent Grisham</li>
-            <li>Wil Myers</li>
-            <li>Jurickson Profar</li>
-            <li>Blake Snell</li>
-            <li>Mike Clevinger</li>
-            <li>Austin Adams</li>
-            <li>Fernando Tatis Jr.</li>
-            <li>Kyle Tyler</li>
+            <li>Nationals</li>
+            <li>Orioles</li>
+            <li>Padres</li>
+            <li>Pirates</li>
+            <li>Phillies</li>
+            <li>Rangers</li>
+            <li>Rays</li>
+            <li>Reds</li>
+            <li>Red Sox</li>
+            <li>Rockies</li>
+            <li>Royals</li>
+            <li>Tigers</li>
+            <li>Twins</li>
+            <li>White Sox</li>
+            <li>Yankees</li>
         </ul>
     </div>
-
+<!-- Team info section -->
+<section id="teamInfo">
+    <!-- First row -->
+    <div id="logo">
+        <h4>Team Logo<h4>
+    </div>
+    <div id="description">
+        <h4>Description<h4>
+    </div>
+    <div id="year">
+        <h4>Year Established<h4>
+    </div>
+    <!-- Second row -->
+<div id="jersey">
+    <h4>Team Uniform<h4>
+</div>
+<div id="stadiumPic">
+    <h4>Picture of Stadium<h4>
+</div>
+<div id="socialMedia">
+    <h4>Team Social Media<h4>
+</div>
+</section>
 
 
 </body>
