Completed JavaScript and HTML files

--- a/index.html
+++ b/index.html
@@ -16,47 +16,52 @@
        <h1><span>Major League Baseball</span> Team Hub</h1>
     </div>
     <!-- Search Bar -->
-    <div id="searchBar">
-        <input placeholder="Search for a team here" type="text">
+    <div>
+        <form id="searchBar">
+          <input placeholder="Enter team number" type="text">
+          <input type="submit">
+        </form>
+        <button onclick="refreshPage()" id="resetBtn">Reset Team</button>
     </div>
+
     <!-- Team name section -->
     <div id="roster">
 
         <h4 style="text-align: center;">MLB Teams</h4>
 
         <ul id="firstHalf">
-            <li>Angels</li>
-            <li>Astros</li>
-            <li>Athletics</li>
-            <li>Blue Jays</li>
-            <li>Braves</li>
-            <li>Brewers</li>
-            <li>Cardinals</li>
-            <li>Cubs</li>
-            <li>Diamondbacks</li>
-            <li>Dodgers</li>
-            <li>Giants</li>
-            <li>Guardians</li>
-            <li>Mariners</li>
-            <li>Marlins</li>
-            <li>Mets</li>
+            <li> 1. Diamondbacks</li>
+            <li> 2. Braves</li>
+            <li> 3. Orioles</li>
+            <li> 4. Red Sox</li>
+            <li> 5. Cubs</li>
+            <li> 6. White Sox</li>
+            <li> 7. Reds</li>
+            <li> 8. Guardians</li>
+            <li> 9. Rockies</li>
+            <li>10. Tigers</li>
+            <li>11. Astros</li>
+            <li>12. Royals</li>
+            <li>13. Angels</li>
+            <li>14. Dodgers</li>
+            <li>15.Marlins</li>
         </ul>
         <ul id="secondHalf">
-            <li>Nationals</li>
-            <li>Orioles</li>
-            <li>Padres</li>
-            <li>Pirates</li>
-            <li>Phillies</li>
-            <li>Rangers</li>
-            <li>Rays</li>
-            <li>Reds</li>
-            <li>Red Sox</li>
-            <li>Rockies</li>
-            <li>Royals</li>
-            <li>Tigers</li>
-            <li>Twins</li>
-            <li>White Sox</li>
-            <li>Yankees</li>
+            <li>16. Brewers</li>
+            <li>17. Twins</li>
+            <li>18. Mets</li>
+            <li>19. Yankees</li>
+            <li>20. Athletics</li>
+            <li>21. Phillies</li>
+            <li>22. Pirates</li>
+            <li>23. Padres</li>
+            <li>24. Giants</li>
+            <li>25. Mariners</li>
+            <li>26. Cardinals</li>
+            <li>27. Rays</li>
+            <li>28. Rangers</li>
+            <li>29. Blue Jays</li>
+            <li>30. Nationals</li>
         </ul>
     </div>
 <!-- Team info section -->
