--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://kit.fontawesome.com/31d57b8d60.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/31d57b8d60.js" crossorigin="anonymous"></script>
     <meta name="description" content="Sports API Project">
@@ -12,19 +13,25 @@
 </head>
 
 <body>
+    <img id="mlbLogoOne" src="mlbLogo.png" alt="MLB Logo">
+    <img id="mlbLogoTwo" src="mlbLogo.png"alt="">
+<header>
     <div class="titleName">
-       <h1><span>Major League Baseball</span> Team Hub</h1>
+        <h1><span>Major League Baseball Team Hub</span></h1>
     </div>
     <!-- Search Bar -->
-    <div>
+    <div style="border-bottom: 5px solid white;">
         <form id="searchBar">
-          <input placeholder="Enter team number" type="text">
-          <input type="submit">
+            <input placeholder="Enter team number" type="text">
+            <input type="submit">
         </form>
         <button onclick="refreshPage()" id="resetBtn">Reset Team</button>
     </div>
+</header>
 
     <!-- Team name section -->
+    
+    <div style="border-top: 5px solid #d50032;">
     <div id="roster">
 
         <h4 style="text-align: center;">MLB Teams</h4>
@@ -64,31 +71,36 @@
             <li>30. Nationals</li>
         </ul>
     </div>
-<!-- Team info section -->
-<section id="teamInfo">
-    <!-- First row -->
-    <div id="logo">
-        <h4>Team Logo<h4>
+    <!-- Team info section -->
+    <section id="teamInfo">
+        <!-- First row -->
+        <div id="logo">
+            <h4>Team Logo<h4>
+        </div>
+        <div id="description">
+            <h4 id="manager">Manager</h4>
+            <h4 id="homeField">Home Field Name</h4>
+        </div>
+        <div id="year">
+            <h4>Year Established<h4>
+        </div>
+        <!-- Second row -->
+        <div id="jersey">
+            <h4>Team Uniform<h4>
+        </div>
+        <div id="stadiumPic">
+            <h4>Picture of Stadium<h4>
+        </div>
+        <div id="socialMedia">
+            <h4>Team Social Media<h4>
+                    <div id="links">
+                        <a id="twitter" href=""> <i class="fa-brands fa-twitter-square"></i> </a>
+                        <a id="facebook" href=""> <i class="fa-brands fa-facebook-square"></i> </a>
+                        <a id="instagram" href=""> <i class="fa-brands fa-instagram-square"></i> </a>
+                    </div>
+        </div>
+    </section>
     </div>
-    <div id="description">
-        <h4>Description<h4>
-    </div>
-    <div id="year">
-        <h4>Year Established<h4>
-    </div>
-    <!-- Second row -->
-<div id="jersey">
-    <h4>Team Uniform<h4>
-</div>
-<div id="stadiumPic">
-    <h4>Picture of Stadium<h4>
-</div>
-<div id="socialMedia">
-    <h4>Team Social Media<h4>
-</div>
-</section>
-
-
 </body>
 
 <!-- Link to axios -->
