Added new h3 in HTML file

--- a/index.html
+++ b/index.html
@@ -82,7 +82,8 @@
             <h4 id="homeField">Home Field Name</h4>
         </div>
         <div id="year">
-            <h4>Year Established<h4>
+            <h4 id="yearEst">Year Established<h4>
+                <h4 id="location">Stadium Location</h4>
         </div>
         <!-- Second row -->
         <div id="jersey">
