Edited inputs in HTML file. Styled inputs in CSS

--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
     <div style="border-bottom: 5px solid white;">
         <form id="searchBar">
             <input placeholder="Enter team number" type="text">
-            <input type="submit">
+            <input style="background-color: white; color: #002d72; border: 1.8px solid #d50032;" type="submit">
         </form>
-        <button onclick="refreshPage()" id="resetBtn">Reset Team</button>
+        <button style="background-color: white; color: #002d72; border: 1.8px solid #d50032;" onclick="refreshPage()" id="resetBtn">Reset Team</button>
     </div>
 </header>
 
